--- a/htmlFiles/Article One.html
+++ b/htmlFiles/Article One.html
@@ -1,9 +1,9 @@
 <h3 class="text-success">Article One</h3>
-This is an example of Article One.html in htmlFiles folder, you can change it to what you want.
+This is an example of <span class="info">Article One.html<span> in <span class="primary">htmlFiles</span> folder, you can change it to what you want.
 
-<br/>
+<br/><br/>
 We can use <i class="fab fa-bootstrap mr-1"></i> Bootstrap CSS  & <i class="fab fa-font-awesome mr-1"></i> Font Awesome Icons
 
-<br/>
-NOTE: Do not contain &lt;html&gt; &lt;body&gt; &lt;script&gt; tags in the content file.
+<br/><br/>
+NOTE: Do not contain &lt;html&gt; &lt;body&gt; &lt; script &gt; tags in the content file.
 
