--- a/htmlFiles/Article Two.html
+++ b/htmlFiles/Article Two.html
@@ -1,5 +1,5 @@
 <h3 class="text-success">Article Two</h3>
-This is an example of <span class="info">Article Two.html<span> in <span class="primary">htmlFiles</span> folder, you can change it to what you want.
+This is an example of <span class="text-info">Article Two.html</span> in <span class="text-primary">htmlFiles</span> folder, you can change it to what you want.
 
 <br/><br/>
 We can use <i class="fab fa-bootstrap mr-1"></i> Bootstrap CSS  & <i class="fab fa-font-awesome mr-1"></i> Font Awesome Icons
@@ -8,6 +8,6 @@ We can use <i class="fab fa-bootstrap mr-1"></i> Bootstrap CSS  & <i class="fab 
 NOTE: Do not contain &lt;html&gt; &lt;body&gt; &lt; script &gt; tags in the content file.
 
 <br/><br/>
-Tips: The articles list in alphabetical order by default, 
+<span class="text-danger">Tips:</span> The articles list in alphabetical order by default, 
 you can change it by put a specific number ahead, 
-e.g. 1.Article Two.html,  2.Article One.html
+e.g. <span class="text-info">1.Article Two.html</span>,  <span class="text-info">2.Article One.html</span>
