--- a/htmlFiles/Article One.html
+++ b/htmlFiles/Article One.html
@@ -1,9 +1,12 @@
-<h3 class="text-success">Article One</h3>
-This is an example of <span class="info">Article One.html<span> in <span class="primary">htmlFiles</span> folder, you can change it to what you want.
+<h3 class="text-success">Article Two</h3>
+This is an example of <span class="text-info">Article Two.html</span> in <span class="text-primary">htmlFiles</span> folder, you can change it to what you want.
 
 <br/><br/>
 We can use <i class="fab fa-bootstrap mr-1"></i> Bootstrap CSS  & <i class="fab fa-font-awesome mr-1"></i> Font Awesome Icons
 
 <br/><br/>
 NOTE: Do not contain &lt;html&gt; &lt;body&gt; &lt; script &gt; tags in the content file.
+
+<br/><br/>
+<span class="text-danger">Tips:</span> File name will display as the title on your website, and must end with <span class="text-primary">.html</span>
 
