--- a/htmlFiles/Article One.html
+++ b/htmlFiles/Article One.html
@@ -1,5 +1,5 @@
-<h3 class="text-success">Article Two</h3>
-This is an example of <span class="text-info">Article Two.html</span> in <span class="text-primary">htmlFiles</span> folder, you can change it to what you want.
+<h3 class="text-primary">Article One</h3>
+This is an example of <span class="text-info">Article One.html</span> in <span class="text-primary">htmlFiles</span> folder, you can change it to what you want.
 
 <br/><br/>
 We can use <i class="fab fa-bootstrap mr-1"></i> Bootstrap CSS  & <i class="fab fa-font-awesome mr-1"></i> Font Awesome Icons
