Test new ssh key

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>My ReactGithubPress Website</title>
 </head>
+
 <body>
-    <div id="react-js-app">Loading...</div>
+    <div id="react-js-app">Loading My ReactGithubPress Website ...</div>
     <script>
         // Set the content file directory
         githubRepository = {
@@ -17,4 +19,5 @@
     <!-- Load the final compiled ReactGithubPress ReactJS file -->
     <script src="http://localhost:9999/reactApp.js"></script>
 </body>
+
 </html>
